@@ -7,8 +7,12 @@ public class Test04Wrapper {
 		// - boolean , byte , short , char , int , long , float , double
 		// - Boolean , Byte , Short , Character , Integer , Long , Float , Double
 		
-		Integer a = new Integer(10); //비추천(Java 9+)
-		Integer b = new Integer("10"); //비추천(Java 9+)
+		//Integer a = new Integer(10); //비추천(Java 9+)
+		//Integer b = new Integer("10"); //비추천(Java 9+)
+		
+		//(변경이유) -128부터 +127까지는 컴퓨터 기본 구조에서 사용하는 숫자(1byte)
+		Integer a = Integer.valueOf(10); //추천
+		Integer b = Integer.valueOf("10"); //추천
 		
 		System.out.println("a = " + a);
 		System.out.println("a = " + b);
@@ -29,6 +33,27 @@ public class Test04Wrapper {
 		}
 		System.out.println(buffer.toString());
 		
-		System.out.println(Integer.toBinaryString(n));
+		System.out.println(Integer.toBinaryString(n)); //2진수 Binary
+		System.out.println(Integer.toOctalString(n)); //8진수 Octal
+		System.out.println(Integer.toHexString(n)); //16진수 Hex
+		
+		//요약 : 간단한건 int 복잡한건 Integer
+		
+		//int와 Integer는 호환이 된다(하이브리드)
+		Integer x = 10; //int → Integer
+		int y = x;//Integer → int
+		
+		//int와 Integer의 결정적인 차이
+		
+		//(1) null (참조 대상이 없음)
+		//int p = null; // error
+		
+		Integer q = null; // OK
+		
+		//(2) 형태 검사 또는 지정
+		Object r = 100;
+		System.out.println(r instanceof String); //r의 데이터가 String 형태입니까?
+//		System.out.println(r instanceof int); //r의 데이터가 String 형태입니까?
+		System.out.println(r instanceof Integer); //null이 들어갈 수 있는 형태
 	}
 }
